@startuml class_s4
!pragma layout smetana
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam ClassBorderColor #1D4ED8
skinparam ClassBorderThickness 1.5
skinparam ClassHeaderBackgroundColor #2563EB
skinparam ClassHeaderFontColor #FFFFFF
skinparam ClassHeaderFontStyle bold
skinparam ClassBackgroundColor #EFF6FF
skinparam ClassFontColor #111827
skinparam ArrowColor #374151
skinparam ArrowThickness 1.5
skinparam TitleFontSize 13
skinparam TitleFontStyle bold

title Sprint 4 — Classes : Atelier et Cycle de Vie

class RepairTask {
  + id : Guid
  + appointmentId : Guid
  + garageId : Guid
  + taskTitle : String
  + description : String
  + status : RepairTaskStatus
  + assignedAt : DateTime
  + completionNotes : String?
  + estimatedMinutes : int?
  ..
  + CreateRepairTaskCommand()
  + SubmitRepairCompletionCommand()
}

class RepairTaskAssignment {
  + id : Guid
  + repairTaskId : Guid
  + mechanicId : Guid
  + assignedAt : DateTime
  + examinationObservations : String?
  + partsNeeded : String?
  + examinationStatus : String
  + mechanicNotes : String?
  ..
  + SubmitMechanicExaminationReportCommand()
}

class Invoice {
  + id : Guid
  + appointmentId : Guid
  + invoiceNumber : String
  + serviceFee : decimal
  + partsTotal : decimal
  + totalAmount : decimal
  + status : InvoiceStatus
  + clientApproved : bool
  + clientApprovedAt : DateTime?
  ..
  + CreateInvoiceCommand()
  + FinalizeInvoiceCommand()
}

class InvoiceLineItem {
  + id : Guid
  + invoiceId : Guid
  + sparePartId : Guid?
  + description : String
  + quantity : int
  + unitPrice : decimal
  + lineTotal : decimal
}

class Intervention <<Lifecycle Tracker>> {
  + id : Guid
  + appointmentId : Guid?
  + invoiceId : Guid?
  + repairTaskId : Guid?
  + status : LifecycleStatus
  + paymentAmount : decimal?
  + paymentMethod : String?
  + paymentDate : DateTime?
  + paidBy : String?
}

enum LifecycleStatus {
  Created
  UnderExamination
  ExaminationReviewed
  InvoicePending
  Approved / RepairInProgress
  Rejected
  RepairCompleted
  ReadyForPickup
  Closed
}

RepairTask "1" o--> "1..*" RepairTaskAssignment : assigné à
Invoice "1" *--> "1..*" InvoiceLineItem : contient
Intervention --> RepairTask : suit
Intervention ..> Invoice : <<tracks>>
Intervention ..> LifecycleStatus : <<use>>

@enduml

